--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,11 +3,11 @@ pipeline {
      
     environment {
         //once you create ACR in Azure cloud, use that here
-        registryName = "tnvkdya"
+        registryName = "tstdemo"
         //- update your credentials ID after creating credentials for connecting to ACR
-        registryCredential = 'ACR'
+        registryCredential = 'ACR2'
         dockerImage = ''
-        registryUrl = 'newtestnginx.azurecr.io'
+        registryUrl = 'demotstcontainer.azurecr.io'
        
     }
     
@@ -48,7 +48,7 @@ pipeline {
         stage('Docker Run') {
             steps{
                 script {
-                        sh 'docker run -d -p 8096:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
+                        sh 'docker run -d -p 8090:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
                     }
             }
         }
