--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,11 +3,12 @@ pipeline {
      
     environment {
         //once you create ACR in Azure cloud, use that here
-        registryName = "tstdemo"
+        registryName = "nginximage"
         //- update your credentials ID after creating credentials for connecting to ACR
-        registryCredential = 'ACR'
+        registryCredential = 'AzureCR'
         dockerImage = ''
-        registryUrl = 'tstcontainerdemo.azurecr.io'
+        // update you Azure container registery app URL info here (Access Keys)
+        registryUrl = 'nginxreg.azurecr.io'
        
     }
     
