--- a/jenkinsfile
+++ b/jenkinsfile
@@ -46,12 +46,12 @@ pipeline {
             }
         }
         
-        // stage('Docker Run') {
-        //     steps{
-        //         script {
-        //                 sh 'docker run -d -p 8090:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
-        //             }
-        //     }
+        stage('Docker Run') {
+            steps{
+                script {
+                        sh 'docker run -d -p 8090:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
+                    }
+            }
         }
        
    
