--- a/jenkinsfile
+++ b/jenkinsfile
@@ -49,7 +49,8 @@ pipeline {
         stage('Docker Run') {
             steps{
                 script {
-                        sh 'docker run -d -p 8090:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
+                        sh 'docker run -d  --rm --name mydemonginx ${registryUrl}/${registryName}'
+                        //sh 'docker run -d -p 8090:5000 --rm --name mydemonginx ${registryUrl}/${registryName}'
                     }
             }
         }
