--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
      
     environment {
         //once you create ACR in Azure cloud, use that here
-        registryName = "nginxACRimage"
+        registryName = "nginxacrimage"
         //- update your credentials ID after creating credentials for connecting to ACR
         registryCredential = 'AzureCR'
         dockerImage = ''
