--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       # Login to Azure
       - name: Install Azure CLI
+      - uses: azure/setup-azure-cli@v1
       - uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_SECRET }}
