--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,21 @@
-name: Deploy GHCR Image
+name: Deploy to Azure VM
 
 on:
   push:
-    branches:
-      - master
-
+    branches: [ master ]
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Deploy GHCR Image
-        uses: azure/vm-deployment@v1
+      - uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AUTH_NEW }}
+      - uses: junnuvenu/nginx_proj@master
+
         with:
           resource-group: rg-delta-devops
+          azure-subscription-id: '11edc895-44ef-4732-bb6d-ed995cc7934f'
+          location: eastus
           vm-name: multi-tenant-application-docker-test-vm
           image-url: docker pull ghcr.io/junnuvenu/nginx:latest
-          admin-username: azureuser
-          admin-password: Venu12345678
+          image-type: container
