--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,12 @@ jobs:
           azcliversion: 2.15.1
           inlineScript: |
             az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }} -s ${{ secrets.SUBSCRIPTION_ID }}
-        credentialName: ${{ secrets.ssh-keys-azurevm }}
       - uses: azure/vm-deployment@v1
         with:
           resource-group: rg-delta-devops
           vm-name: multi-tenant-application-docker-test-vm
-          image-url: ghcr.io/junnuvenu/nginx:latest
+          image-url: docker pull ghcr.io/junnuvenu/nginx:latest
           image-type: container
+          admin-username: azureuser
+          admin-password: Venu12345678
 
