--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           inlineScript: |
             az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }} -s ${{ secrets.SUBSCRIPTION_ID }}
       - name: Deploy Docker container to Azure VM
-        uses: azure/virtual-machine-deployment@vjunnuvenu/nginx_proj
+        uses: azure/virtual-machine-deployment@junnuvenu/nginx_proj
         with:
           vm-name: multi-tenant-application-docker-test-vm
           resource-group: rg-delta-devops
