--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,5 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
       - name: Deploy image to ACR
         run: |
-          docker tag <ghcr.io/junnuvenu/nginx:latest> "${{ secrets.ACR_LOGIN_SERVER }}/<image>:<tag>"
+          docker tag <ghcr.io/junnuvenu/nginx:1.0.44> "${{ secrets.ACR_LOGIN_SERVER }}/<image>:<tag>"
           docker push "${{ secrets.ACR_LOGIN_SERVER }}/<image>:<tag>"
