--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,5 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
       - name: Deploy image to ACR
         run: |
-          docker tag app ghcr.io/junnuvenu/nginx:1.0.51 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.51"
+          docker tag myappimg:ghcr.io/junnuvenu/nginx:1.0.51 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.51"
           docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.51"
