--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,12 +5,13 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Login to ACR
-        run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-      - name: Deploy image to ACR
-        run: |
-          docker pull ghcr.io/junnuvenu/nginx:1.0.53
-          docker tag ghcr.io/junnuvenu/nginx:1.0.53 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
-          docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.51"
+    - name: Checkout the code
+      uses: actions/checkout@v2
+    - name: Login to ACR
+      run: |
+        echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+    - name: Deploy image to ACR
+      run: |
+        docker pull ghcr.io/junnuvenu/nginx:1.0.53
+        docker tag ghcr.io/junnuvenu/nginx:1.0.53 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
