--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,16 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
-    - name: Login to ACR
+    - name: Login to ghcr.io
       run: |
-        echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
+        docker login --username junnuvenu --password GIT_TOKEN ghcr.io
     - name: Pull image from ghcr.io
       run: |
         docker pull ghcr.io/junnuvenu/nginx:1.0.53
+    - name: Login to ACR
+        run: |
+          echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
         docker tag ghcr.io/junnuvenu/nginx:1.0.53 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53
