--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Deploy image to ACR
       run: |
         docker tag ghcr.io/junnuvenu/nginx:1.0.53 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:1.0.53"
