--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,16 @@ jobs:
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.ACR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-    - name: Pull image from ghcr.io
+    - name: Pull latest image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx:1.0.53
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        docker pull $IMAGE_TAG
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-    - name: Deploy image to ACR
+    - name: Deploy latest image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx:latest "${{ secrets.ACR_LOGIN_SERVER }}/nginx:latest"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:latest"
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        ACR_IMAGE_TAG=${secrets.ACR_LOGIN_SERVER}/nginx:${{ env.GITHUB_SHA }}
+        docker tag $IMAGE_TAG $ACR_IMAGE_TAG
+        docker push $ACR_IMAGE_TAG
