--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy latest image to ACR
       run: |
-        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        IMAGE_TAG_WITH_SHA="ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}" # create new variable with updated value
         ACR_IMAGE_TAG=${secrets.ACR_LOGIN_SERVER}/junnuvenu/nginx:${{ env.GITHUB_SHA }}
-        docker tag $IMAGE_TAG $ACR_IMAGE_TAG
+        docker tag $IMAGE_TAG_WITH_SHA $ACR_IMAGE_TAG  # use new variable here
         docker push $ACR_IMAGE_TAG
