--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,20 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
-    - name: Login to ghcr.io
-      run: |
-        echo "${{ secrets.ACR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-    - name: Pull latest image from ghcr.io
+    - name: Build and Push to ghcr.io
       run: |
         IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
-        docker pull $IMAGE_TAG
+        echo "Building and pushing image with tag $IMAGE_TAG"
+        # Build your image here using a command like "docker build -t $IMAGE_TAG ." 
+        # Push the image to ghcr.io using a command like "docker push $IMAGE_TAG"
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-    - name: Deploy latest image to ACR
+    - name: Pull latest image from ghcr.io
       run: |
         IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
-        ACR_IMAGE_TAG=${secrets.ACR_LOGIN_SERVER}/junnuvenu/nginx:${{ env.GITHUB_SHA }}
-        docker tag $IMAGE_TAG $ACR_IMAGE_TAG
-        docker push $ACR_IMAGE_TAG
+        echo "Pulling image with tag $IMAGE_TAG"
+        docker pull $IMAGE_TAG
+    - name: Deploy latest image to ACR
+      run: |
+        IMAGE_TAG
