--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Build and Push to ghcr.io
       run: |
-        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        IMAGE_TAG="ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}"
         echo "Building and pushing image with tag $IMAGE_TAG"
         # Build your image here using a command like "docker build -t $IMAGE_TAG ." 
         # Push the image to ghcr.io using a command like "docker push $IMAGE_TAG"
@@ -21,7 +21,7 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Pull latest image from ghcr.io
       run: |
-        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        IMAGE_TAG="ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}"
         echo "Pulling image with tag $IMAGE_TAG"
         docker pull $IMAGE_TAG
     - name: Deploy latest image to ACR
