--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         echo "${{ secrets.ACR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
     - name: Build and Push to ghcr.io
       run: |
-        IMAGE_TAG=ghcr.io/ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }}
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }}
         echo "Building and pushing image with tag $IMAGE_TAG"
         # Build your image here using a command like "docker build -t $IMAGE_TAG ." 
         # Push the image to ghcr.io using a command like "docker push $IMAGE_TAG"
