--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,8 +20,8 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   # IMAGE_NAME: ${{ github.repository }}
-  IMAGE_NAME: junnuvenu/nginx_proj
-  IMAGE_TAG : 1.0.${{github.run_number}}
+  IMAGE_NAME: nginx:version
+  IMAGE_TAG : 2.0.${{github.run_number}}
 
 
 jobs:
