--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   # IMAGE_NAME: ${{ github.repository }}
-  IMAGE_NAME: nginx/proj
+  IMAGE_NAME: junnuvenu/nginx
   IMAGE_TAG : 2.0.${{github.run_number}}
 
 
