--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,14 @@ jobs:
         # Build your image here using a command like "docker build -t $IMAGE_TAG ." 
         # Push the image to ghcr.io using a command like "docker push $IMAGE_TAG"
          
-        
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Pull latest image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        echo "pulling the image with tag $IMAGE_TAG"
+        docker pull $IMAGE_TAG
     - name: Deploy latest image to ACR
       run: |
         IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }} 
