--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,11 +12,11 @@ jobs:
         echo "${{ secrets.ACR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
     - name: Pull image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx:2.0.105
+        docker pull ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx:2.0.105 "${{ secrets.ACR_LOGIN_SERVER }}/nginx:2.0.105"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:2.0.105"
+        docker tag ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }} "${{ secrets.ACR_LOGIN_SERVER }}/${{ env.GITHUB_SHA }}"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/${{ env.GITHUB_SHA }}"
