--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,16 +7,19 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
+    - name: Build the image
+      run: |
+        docker build -t ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }} .
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.USERNAME }}" --password-stdin
-    - name: Pull image from ghcr.io
+    - name: Push the image to ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }}
+        docker push ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
         docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}" 
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
