--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,5 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }} "${{ secrets.ACR
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
+        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
