--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,18 @@ jobs:
       uses: actions/checkout@v2
     - name: Login to ghcr.io
       run: |
-        echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u "${{ secrets.USERNAME }}" --password-stdin
-    - name: Pull the image from ghcr.io
+        echo "${{ secrets.ACR_TOKEN }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin ghcr.io
+    - name: Pull latest image from ghcr.io
       run: |
-       version=$(git describe --tags --abbrev=0)
-       echo "Deploying version ${version}"
-       docker pull ghcr.io/junnuvenu/nginx_proj:$version
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        docker pull $IMAGE_TAG
     - name: Login to ACR
-      run: |
+        run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
-    - name: Deploy image to ACR
+    - name: Deploy latest image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx:${{ env.GITHUB_SHA }}"
+        IMAGE_TAG=ghcr.io/junnuvenu/nginx:${{ env.GITHUB_SHA }}
+        ACR_IMAGE_TAG=${secrets.ACR_LOGIN_SERVER}/nginx:${{ env.GITHUB_SHA }}
+        docker tag $IMAGE_TAG $ACR_IMAGE_TAG
+        docker push $ACR_IMAGE_TAG
+
