--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
 name: Deploy
 on: [push]
+env:
+  GITHUB_SHA: ${{ github.sha }}
 
 jobs:
   deploy:
@@ -7,6 +9,7 @@ jobs:
     steps:
     - name: Checkout the code
       uses: actions/checkout@v2
+ 
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin ghcr.io
