--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
     - name: Deploy latest image to ACR
       run: |
         IMAGE_TAG=ghcr.io/junnuvenu/nginx_proj:${{ env.GITHUB_SHA }}
-        ACR_IMAGE_TAG=${secrets.ACR_LOGIN_SERVER}/nginx_proj:${{ env.GITHUB_SHA }}
+        ACR_IMAGE_TAG={{secrets.ACR_LOGIN_SERVER}}/nginx_proj:${{ env.GITHUB_SHA }}
         docker tag $IMAGE_TAG $ACR_IMAGE_TAG
         docker push $ACR_IMAGE_TAG
+
 
