--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx:latest "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.128"
+        docker tag ghcr.io/junnuvenu/nginx_proj:2.0.128 "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.128"
         docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:2.0.128"
