--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,13 @@ jobs:
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
+    - name: Get last tag
+      run: |
+        tags=$(docker run --rm --entrypoint "ash" ghcr.io/junnuvenu/nginx_proj -c "apk add curl; curl -s https://ghcr.io/api/v1/repos/junnuvenu/nginx_proj/tags | jq '.[] | .name' -r" )
+        echo ::set-output name=tag::$(echo $tags | tr ' ' '\n' | sort -n | tail -1)
     - name: Pull image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx_proj:latest
+        docker pull ghcr.io/junnuvenu/nginx_proj:${{ steps.Get last tag.outputs.tag }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
