--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,18 @@ jobs:
     - name: Login to ghcr.io
       run: |
         echo "${{ secrets.GHCR_TOKEN }}" | docker login --username "${{ secrets.USERNAME }}" --password-stdin ghcr.io
-    - name: Get tags from the repository
+    - name: Get_tags_from_the_repository
       run: |
         image_tags=$(curl -s -H "Authorization:Bearer ${{ secrets.GHCR_TOKEN }}" https://ghcr.io/api/v1/repos/junnuvenu/nginx_proj/tags | jq '.[] | .name' -r)
         echo "All available tags: ${image_tags}"
         latest_tag=$(echo "${image_tags}" | tr ' ' '\n' | sort -n -t. -k1,1 -k2,2 -k3,3 | tail -1)
-        echo "latest_tag is: ${latest_tag}"
+        echo "::set-output name=latest_tag::${latest_tag}"
     - name: Pull image from ghcr.io
       run: |
-        docker pull ghcr.io/junnuvenu/nginx_proj:${{ steps.Get tags from the repository.outputs.latest_tag }}
+        docker pull ghcr.io/junnuvenu/nginx_proj:${{ steps.Get_tags_from_the_repository.outputs.latest_tag }}
     - name: Login to ACR
       run: |
           echo "${{ secrets.ACR_PASSWORD }}" | docker login --username "${{ secrets.ACR_USERNAME }}" --password-stdin "${{ secrets.ACR_LOGIN_SERVER }}"
     - name: Deploy image to ACR
       run: |
-        docker tag ghcr.io/junnuvenu/nginx_proj:${{ steps.Get tags from the repository.outputs.latest_tag }} "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ steps.Get tags from the repository.outputs.latest_tag }}"
-        docker push "${{ secrets.ACR_LOGIN_SERVER }}/nginx_proj:${{ steps.Get tags from the repository.outputs.latest_tag }}"
+        docker tag ghcr.io/junnuvenu/nginx_proj:${{ steps.Get_tags_
